Added I2C address list

--- a/indexcontent.html
+++ b/indexcontent.html
@@ -43,7 +43,68 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 for example: <a href="https://www.amazon.ca/SunFounder-Sensor-Kit-Raspberry-Extension/dp/B00P66XRNK/">SunFounder 37 Modules Sensor Kit</a>,
      <a href="https://www.amazon.ca/SunFounder-Modules-Sensor-Raspberry-Extension/dp/B014PF05ZA/">SunFounder 37 Modules Sensor Kit V2.0</a>,
      and <a href="https://www.amazon.ca/Sunfounder-Project-Raspberry-Extension-7-Segment/dp/B00P2E9W30/">SunFounder Project Super Starter Kit w/ 40-Pin GPIO Extension Board</a>.
-	 Note that certain sensors, flame and radiation (among others), are not appropriate for testing in the lab. Friday Section choices:<ol>
+	 Note that certain sensors, flame and radiation (among others), are not appropriate for testing in the lab. Fall 2018 I2C slave device choices for which 6 pin stackable modules must be created:<ol>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MAG3110 3-Axis Magnetometer (0x0E).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Si4713 FM Transmitter with RDS (0x11).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VCNL40x0 proximity sensor (0x13).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> LIS3DH 3-axis accelerometer (0x18).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP9808 temp sensor (0x1A).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MMA845x 3-axis Accelerometer (0x1C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> LSM9DS0 9-axis IMU (0x1D for Accel/Mag, *0x6A for Gyro).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> *LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> FXOS8700 Accelerometer/Magnetometer (0x1F).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Chirp! Water sensor (0x20).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> FXAS21002 Gyroscope (0x21).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23008 I2C GPIO expander (0x22).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23017 I2C GPIO expander (0x23).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VL53L0x ToF distance (0x24 software selectable).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TCS34725 color sensor (0x29).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> CAP1188 8-channel Capacitive Touch (0x2A).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x30-0x37).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> FT6x06 Capacitive Touch Driver (0x38).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VEML6070 UV Index (0x39).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> SSD1305 monochrome OLED (0x3C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> SSD1306 monochrome OLED (0x3D).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HTU21D-F Humidity/Temp Sensor (0x40).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> STMPE610/STMPE811 Resistive Touch controller (0x41).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HDC1008 Humidity/Temp sensor (0x42).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> ISL29125 Color Sensor (0x44).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> SHT31 Humidity/Temp sensor (0x45).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TMP006 IR Temperature sensor (0x46).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TMP007 IR Temperature sensor (0x47).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> YL-40 PCF8591 (0x48).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TSL2561 light sensor (0x49).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TMP102 Temperature sensor (0x4A).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> ADS1115 4-channel 16-bit ADC (0x4B).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> INA219 High-Side DC Current/Voltage sensor (0x4C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MB85RC I2C FRAM (0x50).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Nintendo Nunchuck controller (0x52).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> ADXL345 3-axis accelerometer (0x53).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MAX3010x Pulse & Oximetry sensor (0x57).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TPA2016 I2C-controlled Amplifier (0x58).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> DRV2605 Haptic Motor Driver (0x5A).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> CCS811 VOC sensor (0x5B).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> AM2315 Humidity/Temp sensor (0x5C).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MPR121 12-point capacitive touch sensor (0x5D).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TEA5767 Radio receiver (0x60).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Si5351A Clock Generator (0x61).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A1 12-bit DAC (0x62).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A2 12-bit DAC (0x64).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP4725A3 12-bit DAC (0x66).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> DS3231 RTC (0x68).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> AMG8833 IR Thermal Camera Breakout (0x69).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> *LSM9DS0 9-axis IMU (0x1D for Accel/Mag, *0x6A for Gyro).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> L3GD20H gyroscope (0x6B).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TCA9548 1-to-8 I2C Multiplexer (0x70).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HT16K33 LED Matrix Driver (0x72).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> IS31FL3731 144-LED CharliePlex driver (0x74).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> PCA9685 16-channel PWM driver (0x75).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MS5607/MS5611 Barometric Pressure (0x76).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BME280 Temp/Barometric/Humidity (0x77).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> PN532 NFC/RFID reader (Use UART pins 8:TX and 10:RX).</li>
+	 </ol>Fall 2017 Friday Section choices:<ol>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Time of Flight Sensor <a href="https://kbarc.github.io/SensorEffector/">Kevin</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Barcode with USB <a href="https://ifeoluwadavid.github.io/PartsCribDatabase/">David</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> HC-SR04 Ultrasonic Sensor <a href="https://chris0707.github.io/PiRover/">Christopher</a>.</li>
@@ -63,7 +124,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Lumi Light <a href="https://kenvit.github.io/">Kenneth</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> DMX 512 <a href="https://thekeme.github.io/SensorEffector/">Heakeme</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Side view IR phototransistor & emitter pair (Digikey 1080-1163-ND & 160-1930-ND) Released</a>.</li>
-     </ol>Monday Section choices:<ol>
+     </ol>Fall 2017 Monday Section choices:<ol>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> OpenCV cam <a href="https://github.com/goziethelegion/Legion">Chigozie</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Barcode without USB <a href="https://github.com/Tosino45/">Oluwatosin</a>.</li>
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> DC motor <a href="https://github.com/YohaanA/DCMotor">Yohaan</a>.</li>
