Updated to ensure smaller custom PCBs are made

--- a/indexcontent.html
+++ b/indexcontent.html
@@ -20,20 +20,16 @@
 	 A custom I2C PCB with a six pin stackable header will be designed for each sensor/effector.
 	 The highest AC voltage that will be used is 16Vrms from a wall adaptor from which +/- 15V or as high as 45 VDC can be obtained. Maximum power consumption will be 20 Watts.</li>
     <li>We work with prototypes and prototypes are not to be left powered unattended.</li>
-    <li>A Student Sense Hat kit will be provided to each CENG capstone project student to build for the Broadcom development platform that they purchase.</li>
-    <li>Solder together a sensor hat (parts provided from J233) for a Raspberry Pi 3 (that you purchase). This Broadcom development platform was chosen for a number of reasons.
+    <li>The Raspberry Pi 3 (that you purchase) is a Broadcom development platform that was chosen for a number of reasons.
 	 Let us start with platform requirements, it should be able to be used to create a small programmable device capable of connecting to enterprise Wi-Fi, bluetooth, and I2C.
 	 The Motorola/Freescale/NXP/Qualcomm HCS12 can have a network stack loaded on it, but then not be able to do much more and thus the device would require multiple HCS12s for this purpose causing an increase in cost.
 	 Likewise with Atmel based Arduinos, connecting them to enterprise Wi-Fi is not straightforward.
-	 TI's beaglebone shows promise as an alternative however you would need to redesign the sensor hat in order to be compatible and less resources are available.</li>
+	 TI's beaglebone shows promise as an alternative however boot times and resources are not as good.</li>
 	<li>Here are some videos on soldering: <a 
 href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz</a> be sure to get Kelly and Vlad’s input on how to solder safely in J233. If something does go wrong please be aware that we have <a href="http://humber.ca/student-life/swac/contact-us/swacnorth">nurses on the second floor of the LRC</a> as well as a <a href="http://www.williamoslerhs.ca/about-osler/osler's-facilities/etobicoke-general-hospital">hospital across the street</a></li>
-	<li>Start by soldering together a sensor hat (parts provided from J233) for a raspberry pi 3 (that you purchase) to get started with our hardware projects.
-	 The kits should be available in J233 soon to get started before the term starts if you like.
-	 Here are some <a href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">videos on soldering</a>, be sure to get Kelly and Vlad’s input on how to solder safely in J233.
-	 Also, J233 is not especially busy right now so you can work with Kelly and/or Vlad to use <a href="http://fritzing.org">fritzing</a> to change Your Name to your own name on the Printed Circuit Board files
-	 for the sensor hat and get your PCB laser etched. I have included a simple program that should blink the LED.</li>
-	<li>Here is a helpful webpage regarding connectors: <a href="https://learn.sparkfun.com/tutorials/connector-basics">Connector Basics</a></li>
+	<li>
+	 Also, J233 is not especially busy right now so you can work with Kelly and/or Vlad to use <a href="http://fritzing.org">fritzing</a> to convert your breadboarded sensor connections to a schematic and PCB.</li>
+	<li>Here is a helpful web page regarding connectors: <a href="https://learn.sparkfun.com/tutorials/connector-basics">Connector Basics</a></li>
 	<li>Each student will decide on a sensor or actuator.
     <li>Possible sensor and effector choices to become the class expert on (including calibration) are below.
 	 We have some components available from Wurth but, especially for breakout boards,
@@ -382,7 +378,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	<li>Ensure you bring your Parts Kit. Safety including safety glasses.</li>
     <li>Start off by watching some soldering <a href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">videos</a>.</li>
 	<li><a href="http://radiojove.gsfc.nasa.gov/telescope/soldering.htm">NASA Jove Project.</a>
-	<li>You will be following and making: <a href="https://github.com/six0four/StudentSenseHat/blob/master/README.md"> https://github.com/six0four/StudentSenseHat/blob/master/README.md</a></li>
+	<li>An example project is at: <a href="https://github.com/six0four/StudentSenseHat/blob/master/README.md"> https://github.com/six0four/StudentSenseHat/blob/master/README.md</a></li>
 	<li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad their email address is prototypelab_at_humber.ca.</li>	
     <li>Microsoft Product discussion, MS Project critical path and dependencies are due Week 3 (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week3RubricforProjectSchedule.xml">rubric</a>).</li>
    </ul>
