Added SeeedStudio as an alternative

--- a/indexcontent.html
+++ b/indexcontent.html
@@ -28,7 +28,7 @@
 	<li>Here are some videos on soldering: <a 
 href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz</a> be sure to get Kelly and Vlad’s input on how to solder safely in J233. If something does go wrong please be aware that we have <a href="http://humber.ca/student-life/swac/contact-us/swacnorth">nurses on the second floor of the LRC</a> as well as a <a href="http://www.williamoslerhs.ca/about-osler/osler's-facilities/etobicoke-general-hospital">hospital across the street</a></li>
 	<li>
-	 Also, J233 is not especially busy right now so you can work with Kelly and/or Vlad to use <a href="http://fritzing.org">fritzing</a> to convert your breadboarded sensor connections to a schematic and PCB.</li>
+	 Also, J233 is not especially busy right now so you can work with Kelly and/or Vlad to use <a href="http://fritzing.org">fritzing</a> to convert your breadboarded sensor connections to a schematic and PCB. You may use our in house fabrication via them or use an alternative such as <a href="https://www.seeedstudio.com/fusion.html">SeeedStudio</a>.</li>
 	<li>Here is a helpful web page regarding connectors: <a href="https://learn.sparkfun.com/tutorials/connector-basics">Connector Basics</a></li>
 	<li>Each student will decide on a sensor or actuator.
     <li>Possible sensor and effector choices to become the class expert on (including calibration) are below.
