Added I2C display on 0x27

--- a/indexcontent.html
+++ b/indexcontent.html
@@ -53,7 +53,8 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23008 I2C GPIO expander (0x22).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23017 I2C GPIO expander (0x23).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VL53L0x ToF distance (0x24 software selectable).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="http://www.digole.com/index.php?productID=1215">Digole display</a> (0x27).</li>
+	<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> BNO055 IMU (0x28).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TCS34725 color sensor (0x29).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> CAP1188 8-channel Capacitive Touch (0x2A).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> <a href="https://quadmeup.com/attiny85-light-sensor-i2c-slave-device/">Create your own I2C device</a> (0x30-0x37).</li>
