Update for fall 2018

--- a/indexcontent.html
+++ b/indexcontent.html
@@ -382,6 +382,8 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	<li>An example project is at: <a href="https://github.com/six0four/StudentSenseHat/blob/master/README.md"> https://github.com/six0four/StudentSenseHat/blob/master/README.md</a></li>
 	<li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad their email address is prototypelab_at_humber.ca.</li>	
     <li>Microsoft Product discussion, MS Project critical path and dependencies are due Week 3 (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week3RubricforProjectSchedule.xml">rubric</a>).</li>
+	<li>There may be a quiz based on <a href="https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true">https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true</a>.
+	<li></li>
    </ul>
   </p>
  </SECTION>
