--- a/indexmenu.html
+++ b/indexmenu.html
@@ -1,7 +1,7 @@
                 <NAV>
                         <UL>
                                 <LI><a 
-href="https://github.com/six0four/StudentSenseHat">Repository</a></LI>
+href="https://github.com/six0four/ceng317">Repository</a></LI>
                                 <LI><a 
 href="#Section_0">Week 0 Hardware</a></LI>
 								<LI><a 
