--- a/wk01.html
+++ b/wk01.html
@@ -204,7 +204,7 @@ href="http://www.humber.ca/alumni">Alumni</a></li>
 
                         
 						
-<div w3-include-html="newcontent.html"></div>
+<div w3-include-html="wk01content.html"></div>
 
                 </DIV>
 
