Proposal will be due at the end of next class

--- a/wk01content.html
+++ b/wk01content.html
@@ -7,7 +7,7 @@
   <H3>Week 1 2017-2018 Capstone Project Overview</H3>
   <p>
      <ul>
-	<li>Schedule for today: Introduction, Crib Pi, Homework (Lynda.com, Choose an address).</li>
+	<li>Schedule for today: Introduction, Crib Pi, Homework (Lynda.com, Choose an I2C address, fill in excel table for proposal).</li>
     <li>Start off by logging into a computer.</li>
 	<li>The maximum size of your project is in alignment with the space below the tray in your Humber North Campus Electronics Parts kit, you are expected to bring both along with safety glasses every week otherwise there is a minimum one mark deduction on the week's submission.</li>
     <li>Welcome to your IoT themed hardware projects. Let's get started with some <a href="https://www.youtube.com/watch?v=kM-DXWEns2Y&t=28s">reflective learning.</a></li>
