Updated 1st class

--- a/wk01content.html
+++ b/wk01content.html
@@ -6,19 +6,15 @@
  <SECTION ID="Section_1">
   <H3>Week 1 2017-2018 Capstone Project Overview</H3>
   <p>
-     <ul>
+   <ol>
 	<li>Schedule for today: Introduction, Crib Pi, Homework (Lynda.com, Choose an I2C address, fill in excel table for proposal).</li>
-    <li>Start off by logging into a computer.</li>
-	<li>The maximum size of your project is in alignment with the space below the tray in your Humber North Campus Electronics Parts kit, you are expected to bring both along with safety glasses every week otherwise there is a minimum one mark deduction on the week's submission.</li>
+    <li>Start off by logging into a computer. Please visit the blackboard site. I have noticed that the mobile site can make it difficult to get to the discussion board, <a href="https://learn.humber.ca/webapps/discussionboard/do/conference?action=list_forums&course_id=_118206_1&nav=discussion_board_entry">here</a>
+	 is the direct link to the course discussion board.</li>
+	<li>Regarding computer issues please report them to ITS via Ali_dot_Owayid_at_humber_dot_ca and cc me to bring downed computers to our attention for repair.</li>
     <li>Welcome to your IoT themed hardware projects. Let's get started with some <a href="https://www.youtube.com/watch?v=kM-DXWEns2Y&t=28s">reflective learning.</a></li>
 	<li>Blackboard (Bio, Outline, Critical Path, Weeks).</li>
+	<li>The maximum size of your project is in alignment with the space below the tray in your Humber North Campus Electronics Parts kit, you are expected to bring both along with safety glasses every week otherwise there is a minimum one mark deduction on the week's submission.</li>
 	<li>Pseudo code assignment working with first year students.</li>
-	<li>Regarding computer issues please report them to ITS by using this form to bring downed computers to their attention for repair:
-     <a href="http://humbercollege.formstack.com/forms/computerproblem">http://humbercollege.formstack.com/forms/computerproblem</a></li>
-
-   <ol>
-    <li>Welcome! Please visit the blackboard site. I have noticed that the mobile site can make it difficult to get to the discussion board, <a href="https://learn.humber.ca/webapps/discussionboard/do/conference?action=list_forums&course_id=_96863_1&nav=discussion_board_entry">here</a>
-	 is the direct link to the course discussion board.</li>
 	<li>In CENG 319 Software Project, students will work in groups to create an Android Application that can connect to a database.</li>
     <li>In CENG 317 Hardware Production Technology, students will work individually to prepare working hardware (an I2C circuit board) that can connect to a database for a sensor or effector type relevant to their Android application.</li>
     <li>In CENG 355 Computer Systems Project students work in groups to integrate their mobile application with their sensors and effectors to create an IoT device that for which both it and its application can independently
@@ -55,7 +51,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> *LSM303 Accelerometer & Magnetometer (0x19 for accelerometer and *0x1E for magnetometer).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Zhill FXOS8700 Accelerometer/Magnetometer (0x1F).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> Chirp! Water sensor (0x20).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> FXAS21002 Gyroscope (0x21).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Jeremy FXAS21002 Gyroscope (0x21).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23008 I2C GPIO expander (0x22).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> MCP23017 I2C GPIO expander (0x23).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> VL53L0x ToF distance (0x24 software selectable).</li>
