--- a/wk01content.html
+++ b/wk01content.html
@@ -70,7 +70,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Denald ISL29125 Color Sensor (0x44).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Tarundeep SHT31 Humidity/Temp sensor (0x45).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Malin TMP006 IR Temperature sensor (0x46).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TMP007 IR Temperature sensor (0x47).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Rutvij TMP007 IR Temperature sensor (0x47).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> YL-40 PCF8591 (0x48).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Simarjeet/Divendra conflict... TSL2561 light sensor (0x49).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TMP102 Temperature sensor (0x4A).</li>
