--- a/wk01content.html
+++ b/wk01content.html
@@ -96,7 +96,7 @@ href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWB
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kenneth L3GD20H gyroscope (0x6B).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> TCA9548 1-to-8 I2C Multiplexer (0x70).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> HT16K33 LED Matrix Driver (0x72).</li>
-	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> IS31FL3731 144-LED CharliePlex driver (0x74).</li>
+	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Kuljeet IS31FL3731 144-LED CharliePlex driver (0x74).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled=""> PCA9685 16-channel PWM driver (0x75).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Gursehaj MS5607/MS5611 Barometric Pressure (0x76).</li>
 	 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" checked="" disabled=""> Samuel BME280 Temp/Barometric/Humidity (0x77).</li>
